--- a/src/components/GlobalStyles/GlobalStyle.scss
+++ b/src/components/GlobalStyles/GlobalStyle.scss
@@ -2,7 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap');
 
 :root{
-
+    --primary:#fe2c55;
+    --black:#000;
+    --text-color:#333;
 
     // defautl Layout
     --default-layout-header-height:60px;
@@ -25,4 +27,15 @@ html{
 body{
     font-family: 'IBM Plex Sans', sans-serif;
     font-size:1.6rem;
+}
+
+
+button, input, [tabindex]{
+    border:none;
+    outline:none;
+}
+
+a[href]{
+    color:var(--text-color);
+    text-decoration: none;
 }
