--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,4 +1,9 @@
 .wrapper {
+    --search-boder-radius: 92px;
+    --search-height: 46px;
+    --search-top-spacer: 9px;
+    --search-button-width:52px;
+
     width: 100%;
     height: var(--default-layout-header-height);
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
@@ -7,6 +12,80 @@
 }
 
 .inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     height: 100%;
     width: var(--default-layout-width);
 }
+
+
+.search {
+    position: relative;
+    display: flex;
+    width: 361px;
+    height: var(--search-height);
+    background-color: rgba(22, 24, 35, 0.06);
+    border-radius: var(--search-boder-radius);
+    padding-left: 16px;
+    border: 1.5px solid transparent;
+
+    input {
+        flex:1;
+        font-size: 1.6rem;
+        height: 100%;
+        color: var(--black);
+        background-color: transparent;
+        caret-color: var(--primary);
+    }
+
+
+    input:not(:placeholder-shown)~ .search-btn{
+        color:#4d4e57;
+    } 
+    &:focus-within {
+        border-color: rgba(22, 24, 35, 0.2);
+    }
+
+}
+
+
+.search-btn {
+    position: relative;
+    color: #a6a7ab;
+    font-size: 1.8rem;
+    width: var(--search-button-width);
+    height: 100%;
+    border-top-right-radius: var(--search-boder-radius);
+    border-bottom-right-radius: var(--search-boder-radius);
+
+    &:hover {
+        cursor: pointer;
+        background-color: #ebebeb;
+    }
+
+    &::after {
+        content: '';
+        position: absolute;
+        height: calc(var(--search-height) - var(--search-top-spacer) * 2);
+        width: 1px;
+        background-color: rgba(22, 24, 35, 0.12);
+        top: var(--search-top-spacer);
+        right: var(--search-button-width);
+    }
+    &:active{
+        background-color:#e4e4e6;
+    }
+
+   
+}
+
+.clear,.loading {
+    position: absolute;
+    right: calc(var(--search-button-width) + 16px);
+    top: 50%;
+    transform: translateY(-50%);
+    color: #a6a7ab;
+}
+
+.actions {}
