--- a/src/components/GlobalStyles/GlobalStyle.scss
+++ b/src/components/GlobalStyles/GlobalStyle.scss
@@ -1,41 +1,41 @@
 @import 'normalize.css';
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap');
 
-:root{
-    --primary:#fe2c55;
-    --black:#000;
-    --text-color:#333;
+:root {
+    --white: #fff;
+    --primary: #fe2c55;
+    --black: #000;
+    --text-color: #333;
 
     // defautl Layout
-    --default-layout-header-height:60px;
-    --default-layout-width:1150px;
+    --default-layout-header-height: 60px;
+    --default-layout-width: 1150px;
 }
 
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-
-html{
-    font-size:62.5%;
-    line-height:1.5;
-
+html {
+    font-size: 62.5%;
+    line-height: 1.5;
 }
 
-body{
+body {
     font-family: 'IBM Plex Sans', sans-serif;
-    font-size:1.6rem;
+    font-size: 1.6rem;
 }
 
-
-button, input, [tabindex]{
-    border:none;
-    outline:none;
+button,
+input,
+[tabindex] {
+    border: none;
+    outline: none;
 }
 
-a[href]{
-    color:var(--text-color);
+a[href] {
+    color: var(--text-color);
     text-decoration: none;
 }
