building css with 'header' to tiktok_ui part 4

--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -99,4 +99,10 @@
     color: #a6a7ab;
 }
 
+.more-btn{
+    font-size:2rem;
+    margin-left:24px;
+    background-color:transparent;
+}
+
 .actions {}
