--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -2,7 +2,7 @@
     --search-boder-radius: 92px;
     --search-height: 46px;
     --search-top-spacer: 9px;
-    --search-button-width:52px;
+    --search-button-width: 52px;
 
     width: 100%;
     height: var(--default-layout-header-height);
@@ -12,13 +12,13 @@
 }
 
 .inner {
+    padding: 0 var(--default-layout-holizontal-spacer);
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 100%;
     width: var(--default-layout-width);
 }
-
 
 .search {
     position: relative;
@@ -30,7 +30,7 @@
     border: 1.5px solid transparent;
 
     input {
-        flex:1;
+        flex: 1;
         font-size: 1.6rem;
         height: 100%;
         color: var(--black);
@@ -38,27 +38,25 @@
         caret-color: var(--primary);
     }
 
-
-    input:not(:placeholder-shown)~ .search-btn{
-        color:#4d4e57;
-    } 
+    input:not(:placeholder-shown) ~ .search-btn {
+        color: #4d4e57;
+    }
     &:focus-within {
         border-color: rgba(22, 24, 35, 0.2);
     }
-
 }
 
-
-.search, .search-result{
+.search,
+.search-result {
     width: 361px;
 }
 
-.search-title{
-    font-size:1.4rem;
+.search-title {
+    font-size: 1.4rem;
     padding: 5px 12px;
     font-weight: 600;
-    color:rgba(22, 24, 35, 0.2);
-    cursor:default;
+    color: rgba(22, 24, 35, 0.2);
+    cursor: default;
 }
 
 .search-btn {
@@ -84,14 +82,13 @@
         top: var(--search-top-spacer);
         right: var(--search-button-width);
     }
-    &:active{
-        background-color:#e4e4e6;
+    &:active {
+        background-color: #e4e4e6;
     }
-
-   
 }
 
-.clear,.loading {
+.clear,
+.loading {
     position: absolute;
     right: calc(var(--search-button-width) + 16px);
     top: 50%;
@@ -99,10 +96,29 @@
     color: #a6a7ab;
 }
 
-.more-btn{
-    font-size:2rem;
-    margin-left:24px;
-    background-color:transparent;
+.actions {
+    display: flex;
+    align-items:center;
+}
+.more-btn {
+    font-size: 2rem;
+    margin-left: 24px;
+    background-color: transparent;
+    cursor: pointer;
 }
 
-.actions {}
+.action-btn{
+    font-size:2.2rem;
+    background-color:transparent;
+    padding:4px 12px;
+    cursor: pointer;
+}
+.user-avatar{
+    width: 32px;
+    height: 32px;
+    object-fit: cover;
+    border-radius:500px;
+    cursor: pointer;
+    margin-left: 12px;
+}
+
